Revert the test change